CHANGES IN FLTK 1.3.4rc4				RELEASED: Nov ?? 2016

Bug fixes and other improvements

	- MacOS: fix a crash when closing a fullscreen window.

CHANGES IN FLTK 1.3.4rc3				RELEASED: Oct 31 2016

	Bug fixes and other improvements

	- Fix string truncation in fluid (STR #2722 continued).
	- MacOS: fix a small problem where command Quit of the application
	  menu may not work if Fl_Native_File_Chooser is used before any
	  window is shown.


CHANGES IN FLTK 1.3.4rc2				RELEASED: Oct 24 2016

	Bug fixes and other improvements

	- Make sure the "File Systems" menu item of Fl_File_Chooser
	  lists "/" as the first mounted file system (Linux/Unix platform).
	- Added line numbers to Edit -> Show Source Code viewer.
	- Improved fluid's template handling (STR #3335).


CHANGES IN FLTK 1.3.4rc1				RELEASED: Oct 17 2016

	New features and extensions

	- Added support for Mac OS 10.11 "El Capitan" and 10.12 "Sierra".
	- Added full support of true subwindows to the Mac OS X platform.
	  Window nesting to any depth is possible. An Fl_Gl_Window window or
	  subwindow can contain Fl_Window's as subwindows.
        - Fluid now supports external editors (STR#3213)
	  See: Edit -> GUI Settings -> Use external editor
	- Added method Fl_Widget::is_label_copied().
	- Added methods Fl_Copy_Surface::w(), Fl_Copy_Surface::h(),
	  and Fl_Copy_Surface::draw_decorated_window().
	- Added method Fl_Image_Surface::draw_decorated_window().
	- Added method Fl_Shared_Image *Fl_Image_Surface::highres_image()
	  to draw into a high-resolution bitmap image (Mac OS X only).
	- Added support for OpenGL version 3 and later.
	- Added method Fl_Mac_App_Menu::custom_application_menu_items()
	  allowing to customize the application menu on the Mac OS X platform.
	- Added 'fluid -u' command-line switch to upgrade fluid files in
	  batch mode. This option opens a fluid ('.fl') file and saves it
	  overwriting the old file with the current syntax and library version